--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,8 @@
 .guest-container, .admin-container {
   min-height: 100vh;
   min-width: 100vw;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
