--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -1,8 +1,8 @@
 .Footer {
-    position: fixed;
     height: 50px;
     width: 100%;
-    margin-top: auto;
-    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: grey;
 }
