--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -4,7 +4,8 @@
     background-color: grey;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 10px;
     align-items: center;
+    padding-inline: 10px;
 }
