--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #464b5b;
 }
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+button {
+  padding: 5px 10px;
 }
