--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -2,10 +2,25 @@
     padding: 20px;
 }
 
+.HomePage header {
+    line-height: 1.5;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #6f868e;
+    margin-bottom: 20px;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
+    font-size: 120%;
+}
+
 .PostsSection {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    align-items: center;
+    gap: 40px;
 }
 
 .Post {
@@ -18,6 +33,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 15px;
+    gap: 10px;
     max-width: 70%;
 }
