--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -19,7 +19,6 @@
 .PostsSection {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 40px;
 }
 
@@ -35,4 +34,9 @@
     justify-content: flex-start;
     gap: 10px;
     max-width: 70%;
+}
+
+.PostText {
+    max-height: 130px;
+    overflow: hidden;
 }
