--- a/client/src/pages/SinglePostPage/SinglePostPage.module.css
+++ b/client/src/pages/SinglePostPage/SinglePostPage.module.css
@@ -9,10 +9,12 @@
     max-width: fit-content;
     margin-inline: auto;
     text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.2);
+    text-align: center;
 }
 
 .SinglePostPage img {
-    max-width: 700px;
+    width: 700px;
+    max-width: 90vw;
     margin: 10px auto;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
