--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -1,50 +1,51 @@
 .HomePage {
-    padding: 20px;
-    min-height: 100vh;
+  padding: 20px;
+  min-height: 100vh;
 }
 
 .HomePage header {
-    line-height: 1.5;
-    padding-bottom: 20px;
-    border-bottom: 2px solid #6f868e;
-    margin-bottom: 20px;
-    color: black;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 20px;
-    font-size: 120%;
+  line-height: 1.5;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #6f868e;
+  margin-bottom: 20px;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px;
+  font-size: 120%;
 }
 
 .PostsSection {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .Post {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .PostContent {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 10px;
-    max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  gap: 10px;
+  width: 70%;
 }
 
 .PostText {
-    max-height: 130px;
-    overflow: hidden;
+  max-height: 130px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 500px) {
-    .HomePage header {
-        justify-content: center;
-        text-align: center;
-    }
+  .HomePage header {
+    justify-content: center;
+    text-align: center;
   }
+}
