--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -6,7 +6,7 @@
 .HomePage header {
   line-height: 1.5;
   padding-bottom: 20px;
-  border-bottom: 2px solid #6f868e;
+  border-bottom: 2px solid #FFC0CB;
   margin-bottom: 20px;
   color: black;
   display: flex;
