--- a/client/src/pages/SinglePostPage/SinglePostPage.module.css
+++ b/client/src/pages/SinglePostPage/SinglePostPage.module.css
@@ -20,7 +20,7 @@
 }
 
 .Content {
-    border-bottom: 2px solid #6f868e;
+    border-bottom: 2px solid #FFC0CB;
     padding-bottom: 20px;
     line-height: 1.4;
 }
