--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -25,8 +25,30 @@
 
 .Post {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 10px;
+}
+
+@media screen and (max-width: 664px) {
+  .Post {
+    flex-direction: column;
+  }
+
+  .PostContent {
+    max-width: 275px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .Post {
+    margin-inline: auto;
+  }
+
+  .PostContent {
+    min-width: 80%;
+    max-width: 350px;
+  }
+  
 }
 
 .PostContent {
